log
Fri, May  2, 2025  1:32:53 PM: 
 tests:  1|8
total_score: 0/70
Sat, May  3, 2025  6:37:42 PM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeNode':
treemap.c:32:12: error: unused variable 'pair' [-Werror=unused-variable]
     Pair * pair = (Pair*) malloc (sizeof(Pair));
            ^~~~
cc1.exe: all warnings being treated as errors
Sat, May  3, 2025  6:38:40 PM: 
 tests:  4|7
total_score: 5/70
Sat, May  3, 2025  7:33:18 PM: 
 tests:  11|6
total_score: 15/70
Sat, May  3, 2025  9:04:23 PM: 
 tests:  13|5
total_score: 25/70
Sat, May  3, 2025  9:06:33 PM: 
 tests:  15|4
total_score: 25/70
Sat, May  3, 2025  9:34:10 PM: 
 tests:  18|3
total_score: 40/70
Sun, May  4, 2025 12:59:01 PM: 
 tests:  25|1
total_score: 60/70
Sun, May  4, 2025  1:20:14 PM: 
 tests:  29|0
total_score: 70/70
Thu, May  8, 2025  8:29:54 PM: 
 treemap.c | 137 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 128 insertions(+), 9 deletions(-)
 tests:  29|0
total_score: 70/70
5729e4d
